syntax = "proto3";
import "Protos/common.proto";

option csharp_namespace = "com.b_velop.Mqtt.Measurement.Service";

package Measurement;

service Measurement {
  rpc GetMeasurement (GetMeasurementRequest) returns (GetMeasurementReply);
  rpc GetSensors (GetSensorsRequest) returns (GetSensorsReply);
  rpc GetDevices (GetDevicesRequest) returns (GetDevicesReply);
}

message GetMeasurementRequest {
  Common.Guid sensor_id = 1;
}

message GetMeasurementReply {
  double values = 1;
}

message GetSensorsRequest {}

message GetSensorsReply {
  repeated SensorDto sensors = 1;
}

message SensorDto {
  Common.Guid id = 1;
  string name = 2;
}

message GetDevicesRequest {}

message GetDevicesReply {
  repeated DeviceDto devices = 1;
}

message DeviceDto {
  Common.Guid id = 1;
  string name = 2;
}
